--- a/book/2_3_Print_Numbers.html
+++ b/book/2_3_Print_Numbers.html
@@ -179,7 +179,7 @@
 
 }
 </code></pre>
-<p>Now that we have a variable, <code>println!</code> takes two parts, the first is formatting the print, while the second part is the variable to print. the quotes surround everything that will be printed, in our case, <code>{}</code> which is always the input variable. So we have stated to print only the variable.</p>
+<p>Now that we have a variable, <code>println!</code> takes two parts, the first is formatting the print, while the second part is the variable to print. the quotes surround everything that will be printed, in our case, <code>{}</code> which is always the input variable. So we have stated to print only the variable. We probably want to other things than just deal with numbers though, so let's try to </p>
 
                     </main>
 
