--- a/book/print.html
+++ b/book/print.html
@@ -188,8 +188,8 @@
 }
 
 </code></pre>
-<p>// Comments don't do anything in code because of the two // marks before the text and can be put anywhere</p>
-<p>// We need comments to let people know what we're doing in between code, and we'll use them to talk to you throughout code tutorials</p>
+<p>Comments don't do anything in code because of the two // marks before the text and can be put anywhere</p>
+<p>We need comments to let people know what we're doing in between code, and we'll use them to talk to you throughout code tutorials</p>
 <p><img src="./img/hsa_nasa.jpg" alt="hsa nasa" />
 <em>Electron density projection of human serum albumin protein taken by NASA. Even complicated biological things are made of smaller, simpler things!</em> </p>
 <h1 id="add-subtract-multiply-divide"><a class="header" href="#add-subtract-multiply-divide">Add, Subtract, Multiply, Divide</a></h1>
@@ -210,7 +210,7 @@
 
 }
 </code></pre>
-<p>Now that we have a variable, <code>println!</code> takes two parts, the first is formatting the print, while the second part is the variable to print. the quotes surround everything that will be printed, in our case, <code>{}</code> which is always the input variable. So we have stated to print only the variable.</p>
+<p>Now that we have a variable, <code>println!</code> takes two parts, the first is formatting the print, while the second part is the variable to print. the quotes surround everything that will be printed, in our case, <code>{}</code> which is always the input variable. So we have stated to print only the variable. We probably want to other things than just deal with numbers though, so let's try to </p>
 <h1 id="comparing-printing-strings"><a class="header" href="#comparing-printing-strings">Comparing Printing Strings</a></h1>
 <p>I'll just come out and say it: in other interpreted languages, it's really simple to do things. Let's go with the classic, printing &quot;Hello World!&quot;.</p>
 <p>Python: </p>
