--- a/book/2_0_Ready_Go.html
+++ b/book/2_0_Ready_Go.html
@@ -172,8 +172,8 @@
 }
 
 </code></pre>
-<p>// Comments don't do anything in code because of the two // marks before the text and can be put anywhere</p>
-<p>// We need comments to let people know what we're doing in between code, and we'll use them to talk to you throughout code tutorials</p>
+<p>Comments don't do anything in code because of the two // marks before the text and can be put anywhere</p>
+<p>We need comments to let people know what we're doing in between code, and we'll use them to talk to you throughout code tutorials</p>
 <p><img src="./img/hsa_nasa.jpg" alt="hsa nasa" />
 <em>Electron density projection of human serum albumin protein taken by NASA. Even complicated biological things are made of smaller, simpler things!</em> </p>
 
