--- a/book/2_4_Comparing_Printing_Strings.html
+++ b/book/2_4_Comparing_Printing_Strings.html
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="1_0_An_Introduction.html"><strong aria-hidden="true">1.</strong> An Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="1_1_Definitions_and_Background.html"><strong aria-hidden="true">1.1.</strong> Definitions and Background</a></li><li class="chapter-item expanded "><a href="1_2_Binary_vs_Library.html"><strong aria-hidden="true">1.2.</strong> Binary vs Library</a></li></ol></li><li class="chapter-item expanded "><a href="2_0_Ready_Go.html"><strong aria-hidden="true">2.</strong> Ready Go</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2_1_Add_Subtract_Multiply_Divide.html"><strong aria-hidden="true">2.1.</strong> Add, Subtract, Multiply, Divide</a></li><li class="chapter-item expanded "><a href="Semicolons.html"><strong aria-hidden="true">2.2.</strong> Semicolons</a></li><li class="chapter-item expanded "><a href="2_3_Print_Numbers.html"><strong aria-hidden="true">2.3.</strong> Print Numbers</a></li><li class="chapter-item expanded "><a href="2_4_Comparing_Printing_Strings.html" class="active"><strong aria-hidden="true">2.4.</strong> Comparing Printing Strings</a></li><li class="chapter-item expanded "><a href="2_5_Level_Cleared.html"><strong aria-hidden="true">2.5.</strong> Level Cleared!</a></li></ol></li><li class="chapter-item expanded "><a href="3_0_Vectors.html"><strong aria-hidden="true">3.</strong> Vectors</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="3_1_Print_Vectors.html"><strong aria-hidden="true">3.1.</strong> Print Vectors</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="1_0_An_Introduction.html"><strong aria-hidden="true">1.</strong> An Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="1_1_Definitions_and_Background.html"><strong aria-hidden="true">1.1.</strong> Definitions and Background</a></li><li class="chapter-item expanded "><a href="1_2_Binary_vs_Library.html"><strong aria-hidden="true">1.2.</strong> Binary vs Library</a></li></ol></li><li class="chapter-item expanded "><a href="2_0_Ready_Go.html"><strong aria-hidden="true">2.</strong> Ready Go</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2_1_Add_Subtract_Multiply_Divide.html"><strong aria-hidden="true">2.1.</strong> Add, Subtract, Multiply, Divide</a></li><li class="chapter-item expanded "><a href="2_2_Semicolons.html"><strong aria-hidden="true">2.2.</strong> Semicolons</a></li><li class="chapter-item expanded "><a href="2_3_Print_Numbers.html"><strong aria-hidden="true">2.3.</strong> Print Numbers</a></li><li class="chapter-item expanded "><a href="2_4_Comparing_Printing_Strings.html" class="active"><strong aria-hidden="true">2.4.</strong> Comparing Printing Strings</a></li><li class="chapter-item expanded "><a href="2_5_Level_Cleared.html"><strong aria-hidden="true">2.5.</strong> Level Cleared!</a></li></ol></li><li class="chapter-item expanded "><a href="3_0_Vectors.html"><strong aria-hidden="true">3.</strong> Vectors</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="3_1_Print_Vectors.html"><strong aria-hidden="true">3.1.</strong> Print Vectors</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -166,13 +166,11 @@
                         <h1 id="comparing-printing-strings"><a class="header" href="#comparing-printing-strings">Comparing Printing Strings</a></h1>
 <p>I'll just come out and say it: in other interpreted languages, it's really simple to do things. Let's go with the classic, printing &quot;Hello World!&quot;.</p>
 <p>Python: </p>
-<pre><code>thing = &quot;Hello World!&quot;
-print(thing)
-</code></pre>
+<p><code>thing = &quot;Hello World!&quot;</code></p>
+<p><code>print(thing)</code></p>
 <p>R:</p>
-<pre><code>thing = &quot;Hello World!&quot;
-print(thing)
-</code></pre>
+<p><code>thing = &quot;Hello World!&quot;</code></p>
+<p><code>print(thing)</code></p>
 <p>And comparatively in Rust:</p>
 <pre><code>fn main(){
     let thing=&quot;Hello World!&quot;;
