--- a/book/print.html
+++ b/book/print.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="1_0_An_Introduction.html"><strong aria-hidden="true">1.</strong> An Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="1_1_Definitions_and_Background.html"><strong aria-hidden="true">1.1.</strong> Definitions and Background</a></li><li class="chapter-item expanded "><a href="1_2_Binary_vs_Library.html"><strong aria-hidden="true">1.2.</strong> Binary vs Library</a></li></ol></li><li class="chapter-item expanded "><a href="2_0_Ready_Go.html"><strong aria-hidden="true">2.</strong> Ready Go</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2_1_Add_Subtract_Multiply_Divide.html"><strong aria-hidden="true">2.1.</strong> Add, Subtract, Multiply, Divide</a></li><li class="chapter-item expanded "><a href="Semicolons.html"><strong aria-hidden="true">2.2.</strong> Semicolons</a></li><li class="chapter-item expanded "><a href="2_3_Print_Numbers.html"><strong aria-hidden="true">2.3.</strong> Print Numbers</a></li><li class="chapter-item expanded "><a href="2_4_Comparing_Printing_Strings.html"><strong aria-hidden="true">2.4.</strong> Comparing Printing Strings</a></li><li class="chapter-item expanded "><a href="2_5_Level_Cleared.html"><strong aria-hidden="true">2.5.</strong> Level Cleared!</a></li></ol></li><li class="chapter-item expanded "><a href="3_0_Vectors.html"><strong aria-hidden="true">3.</strong> Vectors</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="3_1_Print_Vectors.html"><strong aria-hidden="true">3.1.</strong> Print Vectors</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="1_0_An_Introduction.html"><strong aria-hidden="true">1.</strong> An Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="1_1_Definitions_and_Background.html"><strong aria-hidden="true">1.1.</strong> Definitions and Background</a></li><li class="chapter-item expanded "><a href="1_2_Binary_vs_Library.html"><strong aria-hidden="true">1.2.</strong> Binary vs Library</a></li></ol></li><li class="chapter-item expanded "><a href="2_0_Ready_Go.html"><strong aria-hidden="true">2.</strong> Ready Go</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2_1_Add_Subtract_Multiply_Divide.html"><strong aria-hidden="true">2.1.</strong> Add, Subtract, Multiply, Divide</a></li><li class="chapter-item expanded "><a href="2_2_Semicolons.html"><strong aria-hidden="true">2.2.</strong> Semicolons</a></li><li class="chapter-item expanded "><a href="2_3_Print_Numbers.html"><strong aria-hidden="true">2.3.</strong> Print Numbers</a></li><li class="chapter-item expanded "><a href="2_4_Comparing_Printing_Strings.html"><strong aria-hidden="true">2.4.</strong> Comparing Printing Strings</a></li><li class="chapter-item expanded "><a href="2_5_Level_Cleared.html"><strong aria-hidden="true">2.5.</strong> Level Cleared!</a></li></ol></li><li class="chapter-item expanded "><a href="3_0_Vectors.html"><strong aria-hidden="true">3.</strong> Vectors</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="3_1_Print_Vectors.html"><strong aria-hidden="true">3.1.</strong> Print Vectors</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -193,7 +193,27 @@
 <p><img src="./img/hsa_nasa.jpg" alt="hsa nasa" />
 <em>Electron density projection of human serum albumin protein taken by NASA. Even complicated biological things are made of smaller, simpler things!</em> </p>
 <h1 id="add-subtract-multiply-divide"><a class="header" href="#add-subtract-multiply-divide">Add, Subtract, Multiply, Divide</a></h1>
+<p>Let's try some arithmetic next:</p>
+<pre><code>fn main(){
+    // Make a variable a that holds 1
+    let a = 1;
+    // Make a variable b that holds 2
+    let b = 2;
+    // Add them together to get c
+    let c = a + b;
+    // Multiple by 3!
+    let d = c * 3;
+    // Divide by 3!
+    let e = d / 3;
+
+    // The variable e holds 3, but you'll have to take our word for it for now, we're going to print in the next few sections!
+}
+</code></pre>
+<p><a href="https://play.rust-lang.org/?version=stable&amp;mode=debug&amp;edition=2018&amp;gist=a31f2eadc4a15117a95e13fb5b271fc3">playground</a></p>
 <h1 id="semicolons"><a class="header" href="#semicolons">Semicolons</a></h1>
+<p>What's the point of the semicolons? Aren't we just typing a new thing we want to do on a new line anyway? In Python and R, we continue what we're doing by going to a new line.</p>
+<p>In Rust, semicolons separate the steps of a function. This means we could just type everything on one line separated by semicolons, even though this would look kind of weird. Going to a new line isn't necessary, but makes it look nicer like in Python and R.</p>
+<p>In Rust, the whole binary is run like a single function, thus the main function structure. This means that if we don't have a semicolon, we'll return whatever we get from the non-semicolon line, the main function will end, and so will our program. If we want to return something from a function, we don't need to type <code>return</code>, we just leave out a semicolon!</p>
 <h1 id="print-numbers"><a class="header" href="#print-numbers">Print Numbers</a></h1>
 <p>Let's print something!</p>
 <pre><code>fn main(){
@@ -214,13 +234,11 @@
 <h1 id="comparing-printing-strings"><a class="header" href="#comparing-printing-strings">Comparing Printing Strings</a></h1>
 <p>I'll just come out and say it: in other interpreted languages, it's really simple to do things. Let's go with the classic, printing &quot;Hello World!&quot;.</p>
 <p>Python: </p>
-<pre><code>thing = &quot;Hello World!&quot;
-print(thing)
-</code></pre>
+<p><code>thing = &quot;Hello World!&quot;</code></p>
+<p><code>print(thing)</code></p>
 <p>R:</p>
-<pre><code>thing = &quot;Hello World!&quot;
-print(thing)
-</code></pre>
+<p><code>thing = &quot;Hello World!&quot;</code></p>
+<p><code>print(thing)</code></p>
 <p>And comparatively in Rust:</p>
 <pre><code>fn main(){
     let thing=&quot;Hello World!&quot;;
@@ -265,11 +283,9 @@ print(thing)
 </code></pre>
 <p><a href="https://play.rust-lang.org/?version=stable&amp;mode=debug&amp;edition=2018&amp;gist=b94f6fadd0cb4b684b29f22803547f0d">playground</a></p>
 <p>Can you spot the debug notation? It's the <code>:?</code> inside the <code>{}</code>! Rust is super smart, if we didn't have the debug and just wrote <code>println!(&quot;{}&quot;,thing_of_things)</code> like in our prior examples, we'd get an error like this:</p>
-<pre><code>the trait `std::fmt::Display` is not implemented
-</code></pre>
+<p><code>the trait std::fmt::Display is not implemented</code></p>
 <p>But we'd also get this:</p>
-<pre><code>in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
-</code></pre>
+<p><code>in format strings you may be able to use {:?} (or {:#?} for pretty-print) instead</code></p>
 <p>The first option is exactly what we needed, which leads us to the golden rule: figure out the output Rust gives us. Rust is pretty smart, it'll probably give us some useful clues (and in this case the exact fix) to what to do if we get an error!</p>
 
                     </main>
