--- a/book/print.html
+++ b/book/print.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="1_0_An_Introduction.html"><strong aria-hidden="true">1.</strong> An Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="1_1_Definitions_and_Background.html"><strong aria-hidden="true">1.1.</strong> Definitions and Background</a></li><li class="chapter-item expanded "><a href="1_2_Binary_vs_Library.html"><strong aria-hidden="true">1.2.</strong> Binary vs Library</a></li></ol></li><li class="chapter-item expanded "><a href="2_0_Ready_Go.html"><strong aria-hidden="true">2.</strong> Ready Go</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2_1_Add_Subtract_Multiply_Divide.html"><strong aria-hidden="true">2.1.</strong> Add, Subtract, Multiply, Divide</a></li><li class="chapter-item expanded "><a href="2_2_Semicolons.html"><strong aria-hidden="true">2.2.</strong> Semicolons</a></li><li class="chapter-item expanded "><a href="2_3_Print_Numbers.html"><strong aria-hidden="true">2.3.</strong> Print Numbers</a></li><li class="chapter-item expanded "><a href="2_4_Comparing_Printing_Strings.html"><strong aria-hidden="true">2.4.</strong> Comparing Printing Strings</a></li><li class="chapter-item expanded "><a href="2_5_Level_Cleared.html"><strong aria-hidden="true">2.5.</strong> Level Cleared!</a></li></ol></li><li class="chapter-item expanded "><a href="3_0_Vectors.html"><strong aria-hidden="true">3.</strong> Vectors</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="3_1_Print_Vectors.html"><strong aria-hidden="true">3.1.</strong> Print Vectors</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="1_0_An_Introduction.html"><strong aria-hidden="true">1.</strong> An Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="1_1_Definitions_and_Background.html"><strong aria-hidden="true">1.1.</strong> Definitions and Background</a></li><li class="chapter-item expanded "><a href="1_2_Binary_vs_Library.html"><strong aria-hidden="true">1.2.</strong> Binary vs Library</a></li></ol></li><li class="chapter-item expanded "><a href="2_0_Ready_Go.html"><strong aria-hidden="true">2.</strong> Ready Go</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2_1_Add_Subtract_Multiply_Divide.html"><strong aria-hidden="true">2.1.</strong> Add, Subtract, Multiply, Divide</a></li><li class="chapter-item expanded "><a href="2_2_Semicolons.html"><strong aria-hidden="true">2.2.</strong> Semicolons</a></li><li class="chapter-item expanded "><a href="2_3_Print_Numbers.html"><strong aria-hidden="true">2.3.</strong> Print Numbers</a></li><li class="chapter-item expanded "><a href="2_4_Comparing_Printing_Strings.html"><strong aria-hidden="true">2.4.</strong> Comparing Printing Strings</a></li><li class="chapter-item expanded "><a href="2_5_Level_Cleared.html"><strong aria-hidden="true">2.5.</strong> Level Cleared!</a></li></ol></li><li class="chapter-item expanded "><a href="3_0_Vectors.html"><strong aria-hidden="true">3.</strong> Vectors</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="3_1_Print_Vectors.html"><strong aria-hidden="true">3.1.</strong> Print Vectors</a></li><li class="chapter-item expanded "><a href="3_2_Dot_Notation.html"><strong aria-hidden="true">3.2.</strong> Dot Notation</a></li><li class="chapter-item expanded "><a href="3_3_Notes_On_Vectors.html"><strong aria-hidden="true">3.3.</strong> Notes on Vectors</a></li></ol></li><li class="chapter-item expanded "><a href="4_0_References.html"><strong aria-hidden="true">4.</strong> References</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="4_1_Ownership.html"><strong aria-hidden="true">4.1.</strong> Ownership</a></li></ol></li><li class="chapter-item expanded "><a href="5_0_Characters.html"><strong aria-hidden="true">5.</strong> Characters</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="5_1_Biological_Sequencing_Data.html"><strong aria-hidden="true">5.1.</strong> Biological Sequencing Data</a></li></ol></li><li class="chapter-item expanded "><a href="8_0_Image_Background.html"><strong aria-hidden="true">6.</strong> Image Background</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="8_1_Sequence_To_Image.html"><strong aria-hidden="true">6.1.</strong> Sequence To Image</a></li></ol></li><li class="chapter-item expanded "><a href="9_0_Continuous_Integration.html"><strong aria-hidden="true">7.</strong> Continuous Integration</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -171,7 +171,7 @@
 <p>Hello user! You've found the book of bioinformatics in Rust. If you're a total beginner to anything bioinformatics, Rust, or programming, then this is the book for you. I hope it captures your interest like biology captured mine!</p>
 <p>If you want to reach me or have something you want added to the book, let me know <a href="keybase.io/kana4">here</a>!</p>
 <h1 id="definitions-and-background"><a class="header" href="#definitions-and-background">Definitions and Background</a></h1>
-<p>We'll start by going over a few things that aren't covered in other bioinformatics books but are necessary to understand building in Rust and systems programming in general. Page on!</p>
+<p>We'll start by going over a few things that aren't covered in other bioinformatics books but are necessary to understand building in Rust and systems programming. Page on!</p>
 <h1 id="binary-vs-library"><a class="header" href="#binary-vs-library">Binary VS Library</a></h1>
 <p>When we get a program, we click it, it'll open, and we'll be able to do stuff. We'll have to choose the program based on our operating system.</p>
 <p>The program we're downloading is a <a href="https://en.wikipedia.org/wiki/Executable">binary, also known as an executable</a>: a bunch of operating system-specific operations amalgamated together so the computer can do the things we want it to in (hopefully) an efficient manner. You may have heard this word before on Windows as the <a href="https://en.wikipedia.org/wiki/.exe">.exe</a> file type  or just plain no file extension in Ubuntu or Linux. In Rust, we can make all of these file types really easily!</p>
@@ -193,7 +193,6 @@
 <p><img src="./img/hsa_nasa.jpg" alt="hsa nasa" />
 <em>Electron density projection of human serum albumin protein taken by NASA. Even complicated biological things are made of smaller, simpler things!</em> </p>
 <h1 id="add-subtract-multiply-divide"><a class="header" href="#add-subtract-multiply-divide">Add, Subtract, Multiply, Divide</a></h1>
-<p>Let's try some arithmetic next:</p>
 <pre><code>fn main(){
     // Make a variable a that holds 1
     let a = 1;
@@ -254,8 +253,8 @@
 <p><code>println!(&quot;Our variable contains: {}&quot;, thing);</code></p>
 <h1 id="level-cleared"><a class="header" href="#level-cleared">Level Cleared!</a></h1>
 <p>Congratulations, you cleared level 2! It was a bunch of sections, but we learned some programming building blocks that we'll continue to use for the rest of our career. Time to take a break!</p>
-<p><img src="./img/FMRI.gif" alt="fmri gif" />
-<em>Functional MRI of a resting mouse brain, Zuckerman Institute</em>
+<p><img src="./img/FMRI.gif" alt="fmri gif" /></p>
+<p><em>Functional MRI of a resting mouse brain, Zuckerman Institute</em>
 <a href="https://pubmed.ncbi.nlm.nih.gov/27974609/">Ma, Hillman et al.</a></p>
 <h1 id="vectors"><a class="header" href="#vectors">Vectors</a></h1>
 <p>We made a string in the prior section, so let's make it's simpler cousin, the vector!</p>
@@ -263,7 +262,7 @@
     let thing_of_things = vec![1,2,3,4];
 }
 </code></pre>
-<p>Ok slow down, what is a vector even? A vector in Rust is a sequence of things, in our case the numbers 1,2,3,4 one after the other. We could also make the vector with the following:</p>
+<p>Ok slow down, what is a vector even? A <a href="https://doc.rust-lang.org/rust-by-example/std/vec.html">vector</a> in Rust is a sequence of things, in our case the numbers 1,2,3,4 one after the other. We could also make the vector with the following:</p>
 <pre><code>fn main(){
     let thing1 = 1;
     let thing2 = 2;
@@ -287,6 +286,102 @@
 <p>But we'd also get this:</p>
 <p><code>in format strings you may be able to use {:?} (or {:#?} for pretty-print) instead</code></p>
 <p>The first option is exactly what we needed, which leads us to the golden rule: figure out the output Rust gives us. Rust is pretty smart, it'll probably give us some useful clues (and in this case the exact fix) to what to do if we get an error!</p>
+<h1 id="dot-notation"><a class="header" href="#dot-notation">Dot Notation</a></h1>
+<p>In Rust and a few other programming languages, we can use <a href="https://en.wikipedia.org/wiki/Property_(programming)#Dot_notation">dot notation</a>.
+Dot notation is used when we have a thing and we want to do something with it. In pseudo programming English if I wanted to say: </p>
+<p>&quot;cut apple&quot;</p>
+<p>With dot notation it would look something like: </p>
+<p><code>apple.cut();</code></p>
+<p>where we have an apple and we want to cut it. Let's use dot notation with a vector!</p>
+<pre><code>fn main(){
+    
+    // Make a vector holding the numbers 1,2,3,4
+
+    let vector = vec![1,2,3,4];
+
+    // Use dot notation with len(), a function to get the length of a vector
+
+    let length_of_vector = vector.len();
+
+    // Print the value stored in length_of_vector, which is the length of the vector
+
+    println!(&quot;{}&quot;,length_of_vector)
+
+}
+</code></pre>
+<p><a href="https://play.rust-lang.org/?version=stable&amp;mode=debug&amp;edition=2018&amp;gist=270b25fb22fee3383a695eff2bb33e3f">playground</a></p>
+<p>Congrats! We've not only used our first dot notation, our first function! It doesn't seem like it now, but <code>len()</code> is extremely powerful and a workhorse for Rust programmers of all levels.</p>
+<h1 id="notes-on-vectors"><a class="header" href="#notes-on-vectors">Notes on Vectors</a></h1>
+<p>Vectors are used in Python and R as one of the main objects and it's no different in Rust, but Rust also has many alternatives that can make things faster and more efficient. If you're doing millions of calculations, any small bit counts! This is one of the great things about Rust: where other languages are limited, Rust doesn't have limits. We'll cover some of the features that make Rust much more powerful than the interpreted languages in the next chapter!</p>
+<h1 id="references"><a class="header" href="#references">References</a></h1>
+<p>References are one way to make code super efficient. The general idea is that we have some data and we want to reuse the data. In Python or R, we just have the data in a variable and that variable is copied over and over again whenever we want to use it. In most cases, we could have just made and stored the data once, and just referred to it other times.</p>
+<p>In more concrete terms, Rust makes a book (our data), stores it on a shelf, and whenever someone wants some information from the book, we  let them know where the book is on the shelf rather than making a copy of the whole book. Making copies of a book in the real world is expensive; the same holds true in computation. On the other hand, our new method not only saves us the time of copying a whole book, but means we don't have to walk to the shelf ourselves, and lets us direct a revolving door of people that want books.</p>
+<p>References are a new concept comparing to Python and R, let's see what it would look like in a code block</p>
+<h1 id="ownership"><a class="header" href="#ownership">Ownership</a></h1>
+<p>Ownership is one of the defining and central ideas of the Rust language. Who else could explain it better than the language developers themselves? </p>
+<h1 id="characters"><a class="header" href="#characters">Characters</a></h1>
+<p>Before we get into biological data, we first need to be able to give the computer knowledge of what an alphabet, or even a character is. Computers can only understand numbers, so how do we tell it we want alphabet characters? One way to do that is to choose a number for each character in some systematic way. One method could be instead of ABC we save 123 if we're using the location in the alphabet as our 8-bit integer. Since we know the alphabet, we can store numbers and still know what the numbers are supposed to say.</p>
+<p>Most commonly, this is done with <a href="https://en.wikipedia.org/wiki/Byte">bytes</a>. When your internet company's talking about speeds, megabits are different from megabytes! Each byte most commonly represents a character like A or T, but instead of A or T, it's a number. Since each number represents a character, we can write a word as a vector of numbers. In our first example of ABC, it would just be <code>vec![1,2,3]</code></p>
+<h1 id="biological-sequencing-data"><a class="header" href="#biological-sequencing-data">Biological Sequencing Data</a></h1>
+<p>In this chapter, we're going to start working with biological data, finally! We're going to focus on genetic sequencing data here because a large portion of bioinformatics is focused on this type of data.</p>
+<p>DNA is classically notated as having the four bases ACTG, whereas RNA ACUG. In sequencing data, we also commonly have N, where we're unsure of what base goes there but we think there's something there. </p>
+<pre><code>fn main(){
+    let dna = b&quot;ACTG&quot;.to_vec();
+    let rna = b&quot;ACUG&quot;.to_vec();
+}
+</code></pre>
+<h1 id="image-background"><a class="header" href="#image-background">Image Background</a></h1>
+<p>A computer understands an image a little differently from us: in <a href="https://en.wikipedia.org/wiki/Pixel">pixels</a>! Pixels are the elemental building blocks of images, usually each comprised of three colors: red, green, and blue. Depending on the intensity of each color in the pixel, we can make any other color. For example, white would be 100% red, green, blue (RGB), where black would be 0% red, green, blue.</p>
+<p><img src="./img/Closeup_of_pixels.jpg" alt="Closeup of Pixels" />
+<em>Closeup of pixels. If we squint, we can see that each 'pixel' is made of three rectangular stripes colored red, green, and blue in differing intensities. Image also from Wikipedia.</em></p>
+<p>In the Rust Image library each pixel is represented by three values for RGB, respectively. Most conveniently, these are the same type of values we store for each letter of our sequence (<a href="https://doc.rust-lang.org/book/ch03-02-data-types.html">unsigned 8-bit integer</a>)! </p>
+<h1 id="sequence-to-image"><a class="header" href="#sequence-to-image">Sequence To Image</a></h1>
+<p>At it's heart, Rust doesn't care whether or data is biological or not and since we've already learned how to keep our data in an integer format, all we need to do to create an image from our sequences is to learn how to use the image library to make our first image!</p>
+<p>In this example, we'll make each pixel a letter in our biological sequence, with a different color for each type of letter. If we applied this directly to a sequence, our image would be a single row of differing colored pixels. For example, AAACCC could be brownbrownbrowngreygreygrey. If we think of an image as a quilt or mat of numbers, we could have our image be multiple sequences. Each row of pixels would be a sequence and these would be written out to a file like a typewriter, row by row, to create our final image. Let's try it!</p>
+<pre><code>// Import RgbImage from the Image crate
+use image::RgbImage;
+
+// Import colors from bioutils
+use bioutils::utils::image::color::*;
+
+// Set the width and height of our image. We'll make these constants (const) because they don't change for the whole program. 
+const WIDTH: u32 = 50;
+const HEIGHT: u32 = 50;
+
+fn main() {
+    // Make our sequence
+    let seq = b&quot;AAAACCCCTTTTGGGGNNNN&quot;;
+
+    // Make a new image with height and width that we'll put our data in
+    let mut img = RgbImage::new(HEIGHT, WIDTH); 
+
+    // Set our y coordinate to 49 for first example (the bottom row of pixels in our image) If we set to 50, it'll be out of bounds (0 to 49 for a height of 50) and rust will panic/error.
+    
+    let y_pixel_coord=49; 
+    // Print our unsigned integers for reference
+    println!(&quot;{:?}&quot;, seq); 
+
+    // For each unsigned integer in our sequence 'c', color the pixel corresponding to the x coordinate and y coordinate, color by the unsigned integer present.
+    for (x_pixel_coord, &amp;c) in seq.into_iter().enumerate() { 
+        match c {
+            67 =&gt; img.put_pixel(x_pixel_coord as u32, y_pixel_coord, RED_RGB), // 67 is b&quot;A&quot;, set Adenosine color
+            65 =&gt; img.put_pixel(x_pixel_coord as u32, y_pixel_coord, GREEN_RGB), // 65 is b&quot;C&quot;, set Cytosine color
+            84 =&gt; img.put_pixel(x_pixel_coord as u32, y_pixel_coord, BLUE_RGB), // 84 is b&quot;T&quot;, set Thymine color
+            71 =&gt; img.put_pixel(x_pixel_coord as u32, y_pixel_coord, PURPLE_RGB), // 71 is b&quot;G&quot;, set Guanine color
+            78 =&gt; img.put_pixel(x_pixel_coord as u32, y_pixel_coord, GRAY_RGB), // 110 is b&quot;N&quot;, set Undetermined color
+            _ =&gt; img.put_pixel(x_pixel_coord as u32, y_pixel_coord, BLACK_RGB), // set all other as black
+        };
+    }
+
+    // write our image out to a file
+    img.save(&quot;myfirstimage.png&quot;).unwrap();
+
+}
+</code></pre>
+<p><img src="./img/myfirstimage.png" alt="My First Image" /></p>
+<p><em>Our very first image!</em></p>
+<p>We've not only started working with images, we've even output it into a file we can send our friends!</p>
+<h1 id="continuous-integration"><a class="header" href="#continuous-integration">Continuous Integration</a></h1>
 
                     </main>
 
